--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Gestion Ranking Padel</a>
+    <a class="navbar-brand" href="#">Ranking Padel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,10 +10,13 @@
                 <a class="nav-link" routerLink="home">Home</a>
             </li>
             <li class="nav-item" routerLinkActive='active'>
-                <a class="nav-link" routerLink="about">About</a>
+                <a class="nav-link" routerLink="clup">Club</a>
+            </li>
+            <li class="nav-item" routerLinkActive='active'>
+                <a class="nav-link" routerLink="Ranking">Ranking</a>
             </li>
         </ul>
-        <ul class="navbar-nav" *ngIf="!isLogin">
+        <!-- <ul class="navbar-nav" *ngIf="!isLogin$">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/auth/login">Login</a>
@@ -22,13 +25,14 @@
                     <a class="nav-link" routerLink="/auth/register">Register</a>
                 </li>
             </ul>
-        </ul>
-        <ul class="navbar-nav" *ngIf="isLogin">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" (click)='logout()'>Logout</a>
-                </li>
-            </ul>
-        </ul>
+        </ul> -->
+        <span class="navbar-text">
+            <button class="btn btn-outline-primary" routerLink='/auth/login' *ngIf="!authService.isLoginSubject.value">
+                Login
+            </button>
+            <button class="btn btn-outline-danger" (click)="authService.logout()" *ngIf="authService.isLoginSubject.value">
+                Logout
+            </button>
+        </span>
     </div>
 </nav>
