--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -16,21 +16,12 @@
                 <a class="nav-link" routerLink="Ranking">Ranking</a>
             </li>
         </ul>
-        <!-- <ul class="navbar-nav" *ngIf="!isLogin$">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/auth/login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/auth/register">Register</a>
-                </li>
-            </ul>
-        </ul> -->
+
         <span class="navbar-text">
-            <button class="btn btn-outline-primary" routerLink='/auth/login' *ngIf="!authService.isLoginSubject.value">
+            <button class="btn btn-outline-primary" routerLink='/auth/login' *ngIf="!user">
                 Login
             </button>
-            <button class="btn btn-outline-danger" (click)="authService.logout()" *ngIf="authService.isLoginSubject.value">
+            <button class="btn btn-outline-danger" (click)="logout()" *ngIf="user">
                 Logout
             </button>
         </span>
