--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,10 +1,24 @@
-<div class="card-columns">
+<div class="container">
+    <div class="d-flex justify-content-end">
+        <button (click)="addRanking()" class="btn btn-circle">Añadir</button>
+    </div>
+    <div class="container m-3">
+        <div class="row">
+            <div class="col-sm-6" *ngFor="let ranking of rankings">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ranking.rankingName}}</h5>
+                        <p class="card-text">{{ranking.description}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <button class="btn">
+                          <i class="lar la-edit"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
 
-    <div class="card" *ngFor="let ranking of rankings">
-        <div class="card-body">
-            <h5 class="card-title">{{ranking.rankingName}}</h5>
-            <p class="card-text">{{ranking.description}}</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
 </div>
