--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 }
 
 body {
-    background: #007bff;
-    background: linear-gradient(to right, #0062E6, #33AEFF);
+    background: #ffffff;
+    // background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
 .card-signin {
@@ -99,14 +99,37 @@ body {
     color: #777;
 }
 
-.btn-google {
-    color: white;
-    background-color: #ea4335;
+.xyz {
+    background-size: auto;
+    text-align: center;
+    padding-top: 100px;
 }
 
-.btn-facebook {
-    color: white;
-    background-color: #3b5998;
+.btn-circle.btn-sm {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    font-size: 8px;
+    text-align: center;
+}
+
+.btn-circle.btn-md {
+    width: 50px;
+    height: 50px;
+    padding: 7px 10px;
+    border-radius: 25px;
+    font-size: 10px;
+    text-align: center;
+}
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
 }
 
 
