change login and rename profile component

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" routerLink="clup">Club</a>
             </li>
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
-                <a class="nav-link" routerLink="profile">Ranking</a>
+                <a class="nav-link" routerLink="ranking">Ranking</a>
             </li>
         </ul>
 
