--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+<app-navbar *ngIf="user"></app-navbar>
 
-<div class="container">
+<div class="container-fluid">
     <app-alert></app-alert>
     <router-outlet></router-outlet>
 </div>
