--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,29 +1,31 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card card-signin my-5">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Sign In</h5>
-                    <form [(formGroup)]="loginForm" class="form-signin" (ngSubmit)="onSubmit()">
-                        <div class="form-label-group">
-                            <input type="text" id="username" formControlName="username" class="form-control" placeholder="Nombre de usuario" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" required autofocus>
-                            <label for="username">Usuario</label>
-                        </div>
+<div style="background-image: url('../../../../assets/img/background.jpg'); background-size: cover; height: 100vh !important;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card card-signin my-5">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Sign In</h5>
+                        <form [(formGroup)]="loginForm" class="form-signin" (ngSubmit)="onSubmit()">
+                            <div class="form-label-group">
+                                <input type="text" id="username" formControlName="username" class="form-control" placeholder="Nombre de usuario" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" required autofocus>
+                                <label for="username">Usuario</label>
+                            </div>
 
-                        <div class="form-label-group">
-                            <input type="password" id="password" formControlName="password" class="form-control" placeholder="Contraseña" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required>
-                            <label for="password">Contraseña</label>
-                        </div>
+                            <div class="form-label-group">
+                                <input type="password" id="password" formControlName="password" class="form-control" placeholder="Contraseña" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required>
+                                <label for="password">Contraseña</label>
+                            </div>
 
-                        <div class="custom-control custom-checkbox mb-3">
-                            <input type="checkbox" class="custom-control-input" id="customCheck1">
-                            <label class="custom-control-label" for="customCheck1">Recordar Contraseña</label>
-                        </div>
-                        <button [disabled]="loading" class="btn btn-lg btn-primary btn-block text-uppercase">
+                            <div class="custom-control custom-checkbox mb-3">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                <label class="custom-control-label" for="customCheck1">Recordar Contraseña</label>
+                            </div>
+                            <button [disabled]="loading" class="btn btn-lg btn-dark btn-block text-uppercase">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                             Ingresar
                         </button>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
