--- a/src/app/components/rankings/pages/ranking-form/ranking-form.component.html
+++ b/src/app/components/rankings/pages/ranking-form/ranking-form.component.html
@@ -1,39 +1,58 @@
-<div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Understood</button>
-            </div>
+<modal #myModal modalClass="modal-dialog-centered" class="hide-footer modal_in_modal reduced__modal" [hideCloseButton]="true">
+    <modal-header class="col-12 d-flex justify-content-between align-items-center px-3">
+        <span class="d-inline mb-0" style="font-weight: bold; font-size: 1.2rem; color: #3f4047">
+        Nuevo Ranking
+      </span>
+        <div class="d-flex align-items-center">
+            <a href="" class="text-muted h4 mb-0" (click)="$event.preventDefault(); myModal.close();">
+                <i class="la la-close"></i>
+            </a>
         </div>
-    </div>
-</div>
-<!-- <form>
-        <div class="form-group">
-            <label for="rankingName1">Nombre del ranking</label>
-            <input type="text" class="form-control" id="rankingName1">
+    </modal-header>
+    <modal-content>
+        <div class="row aling-items-center m-0">
+            <ng-container>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <span class="form-title">
+                      Nombre del Ranking
+                    </span>
+                </div>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <input class="form-control" type="text" placeholder="Nombre del ranking" [(ngModel)]="rankingName" />
+                </div>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <span class="form-title">
+                    Fecha de inicio
+                  </span>
+                </div>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <input class="form-control" type="date" placeholder="Fecha de inicio" [(ngModel)]="rankingStartDate" />
+                </div>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <span class="form-title">
+                  Fecha de fin
+                </span>
+                </div>
+                <div class="col-6 align-self-center mb-2 mt-2">
+                    <input class="form-control" type="date" placeholder="Fecha de fin" [(ngModel)]="rankingEndDate" />
+                </div>
+                <div class="col-12 d-flex justify-content-end mt-3">
+                    <!-- <app-loader *ngIf="submitted == 'loading'" [state]="submitted" [minimal]="true"></app-loader> -->
+                    <!-- <button *ngIf="submitted != 'loading'" type="button" (click)="monthlyReportModal.close();" class="btn btn-cancel font-weight-bold mr-3">
+                      {{ 'cancel' | translate }}
+                  </button>
+                    <button *ngIf="submitted != 'loading'" class="btn btn-primary font-weight-bold" [disabled]="!reportToUpdate" (click)="updateInput.click()">
+                      {{ 'update' | translate }}
+                  </button> -->
+
+                    <button type="button" (click)="myModal.close();" class="btn btn-cancel font-weight-bold mr-3">
+                      Cancelar
+                  </button>
+                    <button class="btn btn-primary font-weight-bold">
+                      Crear
+                  </button>
+                </div>
+            </ng-container>
         </div>
-        <div class="form-group">
-            <label for="rankingDescription1">Descripción</label>
-            <input type="text" class="form-control" id="rankingDescription1">
-        </div>
-        <div class="form-group">
-            <label for="startDate1">Inicio</label>
-            <input type="date" class="form-check-date" id="startDate1">
-        </div>
-        <div class="form-group">
-            <label for="endDate1">Fin</label>
-            <input type="date" class="form-check-date" id="endDate1">
-        </div>
-        <button type="submit" class="btn btn-primary">Aceptar</button>
-    </form> -->
-<!-- </div>/ -->
+    </modal-content>
+</modal>
