Changes for create/edit ranking

--- a/src/app/components/rankings/pages/ranking-form/ranking-form.component.html
+++ b/src/app/components/rankings/pages/ranking-form/ranking-form.component.html
@@ -1,7 +1,7 @@
-<modal #myModal modalClass="modal-dialog-centered" class="hide-footer modal_in_modal reduced__modal" [hideCloseButton]="true">
+<modal #myModal modalClass="modal-dialog-centered" class="hide-footer modal_in_modal reduced__modal" [hideCloseButton]="true" (onClose)="resetData()">
     <modal-header class="col-12 d-flex justify-content-between align-items-center px-3">
         <span class="d-inline mb-0" style="font-weight: bold; font-size: 1.2rem; color: #3f4047">
-        Nuevo Ranking
+        {{title}}
       </span>
         <div class="d-flex align-items-center">
             <a href="" class="text-muted h4 mb-0" (click)="$event.preventDefault(); myModal.close();">
@@ -26,7 +26,7 @@
                   </span>
                 </div>
                 <div class="col-6 align-self-center mb-2 mt-2">
-                    <input class="form-control" type="date" placeholder="Fecha de inicio" [(ngModel)]="rankingStartDate" />
+                    <input class="form-control" type="date" placeholder="Fecha de inicio" [ngModel]="rankingStartDate | date:'yyyy-MM-dd'" (ngModelChange)="rankingStartDate = $event" />
                 </div>
                 <div class="col-6 align-self-center mb-2 mt-2">
                     <span class="form-title">
@@ -34,23 +34,15 @@
                 </span>
                 </div>
                 <div class="col-6 align-self-center mb-2 mt-2">
-                    <input class="form-control" type="date" placeholder="Fecha de fin" [(ngModel)]="rankingEndDate" />
+                    <input class="form-control" type="date" placeholder="Fecha de fin" [ngModel]="rankingEndDate | date:'yyyy-MM-dd'" (ngModelChange)="rankingEndDate = $event" />
                 </div>
                 <div class="col-12 d-flex justify-content-end mt-3">
-                    <!-- <app-loader *ngIf="submitted == 'loading'" [state]="submitted" [minimal]="true"></app-loader> -->
-                    <!-- <button *ngIf="submitted != 'loading'" type="button" (click)="monthlyReportModal.close();" class="btn btn-cancel font-weight-bold mr-3">
-                      {{ 'cancel' | translate }}
-                  </button>
-                    <button *ngIf="submitted != 'loading'" class="btn btn-primary font-weight-bold" [disabled]="!reportToUpdate" (click)="updateInput.click()">
-                      {{ 'update' | translate }}
-                  </button> -->
-
                     <button type="button" (click)="myModal.close();" class="btn btn-cancel font-weight-bold mr-3">
                       Cancelar
-                  </button>
-                    <button class="btn btn-primary font-weight-bold">
-                      Crear
-                  </button>
+                    </button>
+                    <button class="btn btn-primary font-weight-bold" [disabled]="!rankingName || !rankingStartDate || !rankingEndDate" (click)="save()">
+                      {{ action }}
+                    </button>
                 </div>
             </ng-container>
         </div>
