--- a/src/app/components/rankings/rankings.component.html
+++ b/src/app/components/rankings/rankings.component.html
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container mt-2">
     <div class="d-flex justify-content-end">
-        <button class="btn btn-circle" (click)="addRanking()">Añadir</button>
+        <button class="btn btn-outline-primary" (click)="addRanking()">
+          <i class="las la-plus-circle"></i>
+        </button>
     </div>
     <div class="container m-3">
         <div class="row">
@@ -9,7 +11,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ranking.rankingName}}</h5>
                         <p class="card-text">{{ranking.description}}</p>
-                        <p class="card-text">Fecha {{ ranking.startDate | date:shortDate }} - {{ranking.endDate | date:shortDate}}</p>
+                        <p class="card-text">Fecha: {{ ranking.startDate | date:'dd/MM/yyyy' }} - {{ranking.endDate | date:'dd/MM/yyyy'}}</p>
                     </div>
                     <div class="d-flex justify-content-end">
                         <button class="btn" (click)="editRanking(ranking)">
