--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -6,14 +6,9 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item" routerLinkActive='active'>
-                <a class="nav-link" routerLink="home">Home</a>
-            </li>
-            <li class="nav-item" routerLinkActive='active'>
-                <a class="nav-link" routerLink="clup">Club</a>
-            </li>
+
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
-                <a class="nav-link" routerLink="ranking">Ranking</a>
+                <a class="nav-link" routerLink="rankings">Rankings</a>
             </li>
         </ul>
 
