update ranking views

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,10 +22,10 @@
     }
 }
 
-.fa {
-    font-size: 32px;
+.las {
+    font-size: 24px;
 }
 
-.las {
-    font-size: 32px;
+.lar {
+    font-size: 24px;
 }
