--- a/src/app/components/rankings/rankings.component.html
+++ b/src/app/components/rankings/rankings.component.html
@@ -1,23 +1,28 @@
-<div class="container mt-2">
+<div class="container-fluid mt-2">
     <div class="d-flex justify-content-end">
         <button class="btn btn-outline-primary" (click)="addRanking()">
-          <i class="las la-plus-circle"></i>
+            <i class="las la-plus-circle"></i>
         </button>
     </div>
+
     <div class="container m-3">
         <div class="row">
             <div class="col-sm-6" *ngFor="let ranking of rankings">
                 <div class="card">
+                    <div class="d-flex justify-content-end">
+                        <a [routerLink]="['/ranking', ranking.rankingId]">
+                            <i class="las la-expand"></i>
+                        </a>
+                        <button class="btn" (click)="editRanking(ranking)">
+                          <i class="lar la-edit"></i>
+                        </button>
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">{{ranking.rankingName}}</h5>
                         <p class="card-text">{{ranking.description}}</p>
                         <p class="card-text">Fecha: {{ ranking.startDate | date:'dd/MM/yyyy' }} - {{ranking.endDate | date:'dd/MM/yyyy'}}</p>
                     </div>
-                    <div class="d-flex justify-content-end">
-                        <button class="btn" (click)="editRanking(ranking)">
-                          <i class="lar la-edit"></i>
-                        </button>
-                    </div>
+
                 </div>
             </div>
 
