--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,11 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="container-fluid mt-3">
+    <div class="row">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation" *ngFor="let rankingGroup of rankingGroups">
+                <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
+            </li>
+        </ul>
+    </div>
     <div class="container">
         <h1 class="display-4">Fluid jumbotron</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
