--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -6,9 +6,11 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
                 <a class="nav-link" routerLink="rankings">Rankings</a>
+            </li>
+            <li class="nav-item" routerLinkActive='active' *ngIf="user">
+                <a class="nav-link" routerLink="users">Usuarios</a>
             </li>
         </ul>
 
