--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,5 +29,21 @@
 .lar {
     font-size: 24px;
 }
+
+.btn-circle {
+    border-radius: 50%;
+    padding: 0px;
+    border: 1px solid #AAA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-circle i {
+    padding: 4px;
+}
+
+
 /* Importing Bootstrap SCSS file. */
+
 @import '~bootstrap/scss/bootstrap';
