--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark flex-column flex-md-column bg-dark">
     <a class="navbar-brand" href="#">Ranking Padel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
             </button>
             <div class="btn-group" *ngIf="user">
               <button type="button" class="btn btn-outline-dark btn-circle dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="../../../../assets/img/profile.png" height="32px">
+                <img src="../../../../assets/img/profile.png" height="24px">
               </button>
               <div class="dropdown-menu dropdown-primary dropdown-menu-right" style="min-width: 250px;">
                 <div class="container mt3" >
