--- a/src/app/components/users/userManagement.component.html
+++ b/src/app/components/users/userManagement.component.html
@@ -1,5 +1,4 @@
-<p>Gestion de Usuarios</p>
-<div>
+<div class="mt-3">
     <div class="container-fluid">
         <div class="row justify-content-between">
             <div class="col4">
@@ -15,37 +14,39 @@
         </div>
     </div>
 
-    <table class="table table-sm table-striped">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Usuario</th>
-                <th scope="col">Nombre de Usuario</th>
-                <th scope="col">Telefono</th>
-                <th scope="col">Email</th>
-                <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let userInfo of filteredUsers">
-                <td>
-                    <ngb-highlight [result]="userInfo.playerName" [term]="searchValue"></ngb-highlight>
-                </td>
-                <td>
-                    <ngb-highlight [result]="userInfo.userName" [term]="searchValue"></ngb-highlight>
-                </td>
-                <td>
-                    <ngb-highlight [result]="userInfo.phoneNumber" [term]="searchValue"></ngb-highlight>
-                </td>
-                <td>
-                    <ngb-highlight [result]="userInfo.email" [term]="searchValue"></ngb-highlight>
-                </td>
-                <td>
-                    <button class="btn btn-sm" (click)="editUser(userInfo)"><i class="lar la-edit"></i></button>
-                    <button class="btn btn-sm" (click)="deleteUser(userInfo)"><i class="las la-trash"></i></button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive-sm">
+        <table class="table table-sm table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Usuario</th>
+                    <th scope="col">Nombre de Usuario</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let userInfo of filteredUsers">
+                    <td>
+                        <ngb-highlight [result]="userInfo.playerName" [term]="searchValue"></ngb-highlight>
+                    </td>
+                    <td>
+                        <ngb-highlight [result]="userInfo.userName" [term]="searchValue"></ngb-highlight>
+                    </td>
+                    <td>
+                        <ngb-highlight [result]="userInfo.phoneNumber" [term]="searchValue"></ngb-highlight>
+                    </td>
+                    <td>
+                        <ngb-highlight [result]="userInfo.email" [term]="searchValue"></ngb-highlight>
+                    </td>
+                    <td>
+                        <button class="btn btn-sm" (click)="editUser(userInfo)"><i class="lar la-edit"></i></button>
+                        <button class="btn btn-sm" (click)="deleteUser(userInfo)"><i class="las la-trash"></i></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="d-flex justify-content-between p-2">
         <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" (pageChange)="refreshData()">
         </ngb-pagination>
@@ -57,6 +58,7 @@
             <option [ngValue]="60">60 usuarios por página</option>
         </select>
     </div>
+
     <app-user-form #userForm (userFormAction)="refresh($event)"></app-user-form>
     <app-messagebox #messageBox (dialogClosed)="deleteUserAction($event)"></app-messagebox>
 </div>
