--- a/src/app/components/rankings/ranking/ranking.component.html
+++ b/src/app/components/rankings/ranking/ranking.component.html
@@ -18,14 +18,25 @@
             </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="groups" role="tabpanel" aria-labelledby="home-tab">
-                    <ul class="list-group">
-                        <li class="list-group-item" *ngFor="let rg of rankingGroups">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">{{rg.name}}</h5>
-                                <!-- <small>Grupo ???</small> -->
+                    <div id="accordion">
+                        <div class="card" *ngFor="let rg of rankingGroups; index as i">
+                            <div class="card-header" id="headingOne">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link" data-toggle="collapse" [attr.data-target]="'#RankingGroup' + i" aria-expanded="false" aria-controls="collapseOne">
+                                        {{rg.name}}
+                                    </button>
+                                </h5>
                             </div>
-                        </li>
-                    </ul>
+
+                            <div id="RankingGroup{{i}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                                <div class="card-body">
+                                    <ul>
+                                        <li *ngFor="let c of rg.couples">{{c?.displayName}}</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="tab-pane fade" id="couples" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="d-flex flex-row-reverse">
