--- a/src/app/components/rankings/ranking/ranking.component.html
+++ b/src/app/components/rankings/ranking/ranking.component.html
@@ -31,7 +31,7 @@
                             <div id="RankingGroup{{i}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     <ul>
-                                        <li *ngFor="let c of rg.couples">{{c?.displayName}}</li>
+                                        <li *ngFor="let c of rg.couples">{{c?.name}}</li>
                                     </ul>
                                 </div>
                             </div>
@@ -49,8 +49,8 @@
                             <div class="card pareja mt-2">
                                 <div class="card-body">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h6 class="card-title">{{couple.name}}</h6>
-                                        <small>Grupo ???</small>
+                                        <h6 class="card-title">{{couple.displayName}}</h6>
+                                        <small>{{couple.rankingGroupName}}</small>
                                     </div>
                                     <div class="d-flex" *ngFor="let player of couple.users">
                                         <small>{{player.playerName}}</small>
